datastore-fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    name: datastore-ing
  namespace: frontend
  annotations:
    kubernetes.io/ingress.class: "kong"   # Kong controller target
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: datastore-frontend-svc
                port:
                  number: 8081
